--- a/public/css/sb-admin-2.css
+++ b/public/css/sb-admin-2.css
@@ -24,7 +24,7 @@
   --white: #fff;
   --gray: #858796;
   --gray-dark: #5a5c69;
-  --primary: #4e73df;
+  --primary: #101d46;
   --secondary: #858796;
   --success: #1cc88a;
   --info: #36b9cc;
