--- a/public/css/style.css
+++ b/public/css/style.css
@@ -6,9 +6,72 @@ main{
     height: 100%;
 }
 
+.filter-table input {
+   display: inline-block;
+   border: none;
+   font-size: 20px;
+   color: #4e73df;
+}
+.filter-table:first-child{
+    background-color: red;
+}
+
 .pengaturan{
     margin-top: -12px;
 }
+
+body.dark {
+	background: #292C35;
+}
+
+.checkbox {
+	opacity: 0;
+	position: absolute;
+}
+
+.label {
+	background-color: #111;
+	border-radius: 50px;
+	cursor: pointer;
+	display: flex;
+	align-items: center;
+	justify-content: space-between;
+	padding: 5px;
+	position: relative;
+	height: 26px;
+	width: 50px;
+	transform: scale(1.5);
+}
+
+.dark-mode{
+    width: 30px;
+}
+
+.label .ball {
+	background-color: #fff;
+	border-radius: 50%;
+	position: absolute;
+	top: 2px;
+	left: 2px;
+	height: 22px;
+	width: 22px;
+	transform: translateX(0px);
+	transition: transform 0.2s linear;
+}
+
+.checkbox:checked + .label .ball {
+	transform: translateX(24px);
+}
+
+
+.fa-moon {
+	color: #f1c40f;
+}
+
+.fa-sun {
+	color: #f39c12;
+}
+
 @media only screen and (max-width: 1032px) {
     .judul{
         font-size: 15px;
